2005-08-15 Braden McDaniel  <braden@endoframe.com>

	Fixes to build with Microsoft Visual C++ 7.1.

	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml-config.h:
	Added file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl-config.h:
	Added file.
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj
	* src/libopenvrml/openvrml-common.h
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml-gl-common.h

2005-08-15 Braden McDaniel  <braden@endoframe.com>

	Moved VRML97 node implementations out of the API.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-08-15 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile:  Define away OPENVRML_API, OPENVRML_LOCAL
	macros.

2005-08-12 Braden McDaniel  <braden@endoframe.com>

	Added openvrml::time_dependent_node abstract node type.
	AudioClip, MovieTexture, and TimeSensor node implementations
	inherit this type.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-08-12 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Added missing cast
	functions to_bounded_volume, to_light, to_navigation_info,
	to_pointing_device_sensor, and to_scoped_light to proto_node.

2005-08-11 Braden McDaniel  <braden@endoframe.com>

	Initial support for gcc 4.0's symbol visibility attribute.

	* configure.ac
	* examples/Makefile.am
	* m4/Makefile.am
	* m4/ov_cxx_visibility.m4:  Added file.
	* mozilla-plugin/src/openvrml-player/Makefile.am
	* src/libopenvrml/Makefile.am
	* src/libopenvrml/openvrml-common.h:  Added file.
	* src/libopenvrml/openvrml-config.h.in:  Added file.